# nessie

./: .gitignore  OOP_PACKAGE_DESIGN.md  README.md  dev-environment.yml  pyproject.toml
.github/workflows/: ci.yml  test-install.yml
examples/: protein_ligand_mutation.py
ligand-switching/: 02_parameterise_acpype.sh  10_prep_neq_fep.sh  FEP_Setup.py  bound_neq_fep_equil.sh  create_complexes.sh  fix_mdp.py  fix_topology_line.py  neq_fep_equil.sh  npt.mdp  run_eq_fep.sh  slurmer.sh  subba.sh  submit_all_equil.sh  submit_fep.sh  unbound_neq_fep_equil.sh
nessie/: pipeline.py
nessie/system_preparation/: ligand.py  protein.py
nessie/utils/: utils.py
protein-mutation-switching/: em_sA.mdp  em_sB.mdp  eq_sA.mdp  eq_sB.mdp  npt1_sA.mdp  npt1_sB.mdp  npt2_sA.mdp  npt2_sB.mdp  nvt1_sA.mdp  nvt1_sB.mdp  nvt2_sA.mdp  nvt2_sB.mdp  prepare_unbound.py  run_NES_eq_pr.sh  switch_sA.mdp  switch_sB.mdp  switch_sB_ph1.mdp  switch_sB_ph2.mdp
scripts/: 01_convert_sdf_to_mol2_and_pdb.sh  03_create_complex_topologies.sh  04_fix_all_top.sh  05_edit_all_gro.sh  06_solvate.sh  07_add_ions.sh  08_make_equil_dirs.sh  09_submit_equil.sh  11_rename_inputs.sh  edit_gro_complex.py  fix_mdp.py  minimise.sh  npt.sh  nvt.mdp  nvt.sh  rename_input_files.sh  run_bound.sh  run_equil.sh  run_fep.sh  setup_neq_fep.py  submit_bound_eq_fep.sh  submit_eq_lambda_prod.sh
tests/system_preparation/: test_ligand.py  test_protein.py
