[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "nessie"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["rich"]

[tool.setuptools.packages.find]
where = ["."]

[project.optional-dependencies]
dev = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
